--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/jlehtonen"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Some utilities for web front-end projects styled with vanilla-extract.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -15,7 +15,6 @@
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
     "test": "jest --watch --config jestconfig.json"
   },
   "author": "Jaakko Lehtonen",
@@ -23,11 +22,13 @@
   "devDependencies": {
     "@types/jest": "^29.2.2",
     "@types/react": "^18.0.25",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.27.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.8.4"
   },
   "files": [
