--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "registry": "https://npm.pkg.github.com/jlehtonen"
   },
   "type": "module",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "Some utilities for web front-end projects styled with vanilla-extract.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -35,6 +35,7 @@
     "lib/**/*"
   ],
   "dependencies": {
+    "@jlehtonen/color": "^0.0.1",
     "@vanilla-extract/css": "^1.9.1",
     "@vanilla-extract/recipes": "^0.2.5"
   }
